reduce blank words length

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,45 +24,45 @@
             "15": "Who did you receive the last phone call from?",
             "16": "Who are you in love with?",
             "17": "What's the silliest thing you've done recently?",
-            "18": "The best moment today was ______________.",
-            "19": "My favorite website is ______________.",
+            "18": "The best moment today was ________.",
+            "19": "My favorite website is ________.",
             "20": "What is the most difficult thing you are fighting against?",
-            "21": "Today I wish I had more ______________.",
-            "22": "Tomorrow will be better because ______________.",
+            "21": "Today I wish I had more ________.",
+            "22": "Tomorrow will be better because ________.",
             "23": "What made this day unusual?",
             "24": "What are you looking for in life?",
             "25": "What is your favorite drink?",
-            "26": "Today the temperature was ______________.",
+            "26": "Today the temperature was ________.",
             "27": "How much did you spend at the supermarket last time?",
-            "28": "Tomorrow ______________.",
+            "28": "Tomorrow ________.",
             "29": "What was your last major purchase?",
-            "30": "My house (home) is a HOME (in an emotional sense) because ______________.",
+            "30": "My house (home) is a HOME (in an emotional sense) because ________.",
             "31": "Who is the last person to tell you they love or care about you?"
         },
         "1": {
             "1": "What is your favorite piece of furniture you own?",
-            "2": "The most expensive bill I paid last month was ______________.",
+            "2": "The most expensive bill I paid last month was ________.",
             "3": "What is the last thing you apologized for?",
-            "4": "My favorite color is ______________.",
+            "4": "My favorite color is ________.",
             "5": "On a scale of 1 to 10, how would you rate your health?",
             "6": "If you could relive today, would you change anything?",
             "7": "Name a person you were hoping to avoid today.",
             "8": "What is the largest screen TV in your house?",
             "9": "What time did you go to sleep last night?",
             "10": "What did you buy today?",
-            "11": "I wish I had ______________.",
+            "11": "I wish I had ________.",
             "12": "How many photos did you take/post today?",
             "13": "Which book are you reading today?",
             "14": "How many hours did you sleep last night?",
             "15": "What's one small thing that always makes you happy?",
             "16": "What is your mood today?",
             "17": "What was the last new thing you experienced?",
-            "18": "My greatest hope is ______________.",
+            "18": "My greatest hope is ________.",
             "19": "What challenged your certainties?",
             "20": "What car do you own?",
             "21": "List your pets.",
             "22": "List 3 things you need to buy.",
-            "23": "Today it made me feel good to know ______________.",
+            "23": "Today it made me feel good to know ________.",
             "24": "In whose life did you make a difference today?",
             "25": "What is your superpower?",
             "26": "What is bothering you?",
@@ -89,10 +89,10 @@
             "16": "Do you weigh every opportunity?",
             "17": "Where were you today?",
             "18": "What advice were you given?",
-            "19": "Today was ______________.",
+            "19": "Today was ________.",
             "20": "What are you happy you did today?",
             "21": "When was the last time you were on vacation? Where did you go?",
-            "22": "The greatest wisdom comes from ______________.",
+            "22": "The greatest wisdom comes from ________.",
             "23": "Who is your hero?",
             "24": "Why?",
             "25": "If you could read someone's mind today, who would you choose?",
@@ -100,7 +100,7 @@
             "27": "Did you thank anyone today?",
             "28": "Did you work hard today?",
             "29": "What did you find in the mailbox today?",
-            "30": "Today was a total ______________.",
+            "30": "Today was a total ________.",
             "31": "What are you looking for?"
         },
         "3": {
@@ -112,13 +112,13 @@
             "6": "What did you eat for breakfast today?",
             "7": "Do you have any regrets today?",
             "8": "How did you add a touch of art to your day today?",
-            "9": "______________ makes me happy.",
+            "9": "________ makes me happy.",
             "10": "When was the last time you danced?",
             "11": "List the people you live with.",
             "12": "What were you afraid of today?",
             "13": "What did you forget?",
             "14": "What is your favorite TV show?",
-            "15": "I believe that ______________.",
+            "15": "I believe that ________.",
             "16": "Who is the last person you kissed?",
             "17": "What were you wearing today?",
             "18": "What is challenging you?",
@@ -130,7 +130,7 @@
             "24": "Were you creative today? How?",
             "25": "What is the next big purchase you need to make?",
             "26": "What is the last thing that made you cry?",
-            "27": "Today was hard because ______________.",
+            "27": "Today was hard because ________.",
             "28": "Who are you jealous of?",
             "29": "Where do you want to go next?",
             "30": "What did you read today?"
@@ -139,18 +139,18 @@
             "1": "Who was kind to you today?",
             "2": "Who is the last person you talked to?",
             "3": "What makes you feel alive?",
-            "4": "The store I frequent the most is ______________.",
+            "4": "The store I frequent the most is ________.",
             "5": "How did you relax today?",
             "6": "Describe your favorite pair of shoes you own.",
             "7": "What rule affects you the most during the day?",
             "8": "How many pairs of shoes do you own?",
-            "9": "Today I lost ______________.",
-            "10": "I wish ______________ had not been invented.",
+            "9": "Today I lost ________.",
+            "10": "I wish ________ had not been invented.",
             "11": "What is the most expensive thing you own that you can carry with you?",
             "12": "How much money do you have in your wallet right now?",
             "13": "What made today a unique day?",
             "14": "What did you not complete today?",
-            "15": "Today the weather was ______________.",
+            "15": "Today the weather was ________.",
             "16": "What did you receive by email today?",
             "17": "What did you want to say today?",
             "18": "What was the biggest decision you made today?",
@@ -186,7 +186,7 @@
             "15": "What scares you but you would still like to do?",
             "16": "How do you picture yourself in five years?",
             "17": "What is your favorite dish to cook?",
-            "18": "It's never too ______________.",
+            "18": "It's never too ________.",
             "19": "What is the most important thing that was said to you today?",
             "20": "What is the last thing you thought about today?",
             "21": "What is the title of the last book you read?",
@@ -197,18 +197,18 @@
             "26": "Were you feeling good or bad today?",
             "27": "What is the smartest thing you did today?",
             "28": "What are you most confident about?",
-            "29": "Today I was ______________.",
-            "30": "The last thing I bought for myself was ______________."
+            "29": "Today I was ________.",
+            "30": "The last thing I bought for myself was ________."
         },
         "6": {
             "1": "Were you alone today?",
             "2": "Who was the last person you saw today?",
             "3": "What do you need to let go of?",
             "4": "What movie would you like to watch?",
-            "5": "I can't/I am not able to ______________.",
+            "5": "I can't/I am not able to ________.",
             "6": "Who did you send a message to today?",
             "7": "What is a question you are searching for an answer to in your life?",
-            "8": "Something funny happened while ______________.",
+            "8": "Something funny happened while ________.",
             "9": "Name one thing you should throw away, but you don't.",
             "10": "What has made you satisfied with yourself recently?",
             "11": "Who did you see most often today?",
@@ -238,18 +238,18 @@
             "2": "What did you give up?",
             "3": "What do you want to finish tomorrow?",
             "4": "What is the last gift you gave?",
-            "5": "The last time I worked out ______________.",
+            "5": "The last time I worked out ________.",
             "6": "What did you create today?",
             "7": "What memory crossed your mind today?",
             "8": "What is the last risk you took?",
             "9": "What makes you compromise?",
             "10": "Did you think about anyone in particular today? Who and why?",
-            "11": "On a scale of 1 to 10, my day was ______________.",
+            "11": "On a scale of 1 to 10, my day was ________.",
             "12": "What does the last message you received say?",
             "13": "Do you owe money to anyone?",
             "14": "What is your favorite part of your body?",
             "15": "What is the worst thing you ate today?",
-            "16": "I hope no one was watching while ______________.",
+            "16": "I hope no one was watching while ________.",
             "17": "How many kilometers did you travel today?",
             "18": "Who was the first person you saw today?",
             "19": "What is the strongest feeling you are experiencing right now?",
@@ -271,30 +271,30 @@
             "2": "What are you curious about?",
             "3": "What is the last thing you learned?",
             "4": "Where would you like to go?",
-            "5": "The last time you went to the doctor ______________.",
+            "5": "The last time you went to the doctor ________.",
             "6": "What small act of kindness did you receive or perform today?",
             "7": "What is the last thing you feel guilty about?",
-            "8": "My life would be easier if ______________.",
+            "8": "My life would be easier if ________.",
             "9": "Does anyone owe you money?",
             "10": "When was the last time you intentionally wasted time?",
             "11": "What is your favorite gadget?",
-            "12": "The device I use most often is ______________.",
+            "12": "The device I use most often is ________.",
             "13": "How did you spend your free time today?",
             "14": "Were you stressed today? Why?",
             "15": "What was the last thing you said to someone today?",
             "16": "Who went wild at the last party you attended?",
             "17": "What went perfectly today?",
             "18": "How old do you think you are?",
-            "19": "Oh my God! ______________.",
+            "19": "Oh my God! ________.",
             "20": "Why did you feel pressured today?",
-            "21": "The last gift I received was ______________.",
+            "21": "The last gift I received was ________.",
             "22": "If you could change today, would you?",
-            "23": "I believe ______________.",
+            "23": "I believe ________.",
             "24": "What did you hope to avoid today?",
             "25": "Were you in control of the situations today?",
             "26": "What made this day fruitful?",
             "27": "Were you able to listen today?",
-            "28": "Never ______________.",
+            "28": "Never ________.",
             "29": "Did you break the law? How?",
             "30": "Were you bored today?"
         },
@@ -310,7 +310,7 @@
             "9": "What did you do wrong?",
             "10": "Did you have an insight or an interesting idea today?",
             "11": "What is your goal?",
-            "12": "If someone had to describe your behavior today in one word, it would be ______________.",
+            "12": "If someone had to describe your behavior today in one word, it would be ________.",
             "13": "Did you have a conversation that made you think?",
             "14": "Describe the last piece of furniture you bought.",
             "15": "What time did you get up today?",
@@ -320,7 +320,7 @@
             "19": "Next year, what do you hope will characterize your life?",
             "20": "Who in your family has an extraordinary talent? What is it?",
             "21": "What would you like there to be more of in the world?",
-            "22": "My favorite sound is ______________.",
+            "22": "My favorite sound is ________.",
             "23": "What impact do you hope to have on the world?",
             "24": "If you could make laws, what would today's law be?",
             "25": "Describe the last episode that shook your life.",
@@ -358,14 +358,14 @@
             "24": "List the last 3 things you used today.",
             "25": "What sound or noise can you not stand?",
             "26": "Do you feel appreciated?",
-            "27": "My body is ______________.",
-            "28": "Today I ______________ too much/many ______________.",
+            "27": "My body is ________.",
+            "28": "Today I ________ too much/many ________.",
             "29": "What object do you own that reminds you of a beautiful moment from the past?",
             "30": "What did you have to do today?"
         },
         "11": {
             "1": "If time were not an issue, what would you do?",
-            "2": "I really wish ______________.",
+            "2": "I really wish ________.",
             "3": "Was there a moment when you felt particularly connected with someone?",
             "4": "What memory do you want to keep from today?",
             "5": "If you could have dinner with one person, living or dead, who would you choose?",
@@ -373,7 +373,7 @@
             "7": "What job did you want to have?",
             "8": "What relationship did you cultivate today?",
             "9": "What are you passionate about?",
-            "10": "Tomorrow I think I have to ______________.",
+            "10": "Tomorrow I think I have to ________.",
             "11": "Do you envy anyone?",
             "12": "A strange thing that happened today?",
             "13": "How much were you alone today?",
@@ -383,16 +383,16 @@
             "17": "What was the first thing you saw when you woke up this morning?",
             "18": "List 3 things you have to do tomorrow.",
             "19": "What is the last website you visited?",
-            "20": "Today I chose to ______________.",
+            "20": "Today I chose to ________.",
             "21": "Did you have positive or negative thoughts today?",
             "22": "Who is the strongest person you know and why?",
             "23": "Who would you have liked to be part of your day?",
             "24": "What is one thing that was said to you today that you don't want to forget?",
             "25": "What was your weakness today?",
-            "26": "The music genre I listen to most often is ______________.",
+            "26": "The music genre I listen to most often is ________.",
             "27": "How much did you eat today?",
             "28": "What is worth fighting for?",
-            "29": "Today I felt ______________.",
+            "29": "Today I felt ________.",
             "30": "Were you more smiling or frowning today?",
             "31": "What progress are you making?"
         }
