add language selector label to improve site accessibility

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -5,6 +5,7 @@
     "futureQuestion": "Impaziente? Stai sbirciando la domanda del {date}:",
     "pastQuestion": "La domanda del {date} era:",
     "todayQuestion": "Preparati a rispondere! La domanda di oggi è:",
+    "language": "Lingua",
     "questions": {
         "0": {
             "1": "Qual è il tuo obiettivo principale dell’anno?",
