--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,7 @@
     "futureQuestion": "Can't wait? You are peeking at the question for {date}:",
     "pastQuestion": "The question for {date} was:",
     "todayQuestion": "Get ready! Today's question is:",
+    "language": "Language",
     "questions": {
         "0": {
             "1": "What is your main goal for the year?",
