--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,8 @@
 {
     "today": "Today",
     "specificDate": "Choose a specific date: ",
+    "previousDay": "Go to the previous day",
+    "nextDay": "Go to the next day",
     "futureQuestion": "Can't wait? You are peeking at the question for {date}:",
     "pastQuestion": "The question for {date} was:",
     "todayQuestion": "Get ready! Today's question is:",
