rephrase november 14th question in both english and italian

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -347,7 +347,7 @@
             "11": "What is the last lie you told?",
             "12": "What is your favorite cuisine?",
             "13": "What do you have 'too much' of?",
-            "14": "What would you like to say to yourself in a year?",
+            "14": "What would you like to say to the one-year-ago-yourself?",
             "15": "What is your greatest strength?",
             "16": "Apart from your clothes, what did you have with you most of the time today?",
             "17": "What is your most satisfying guilty pleasure?",
