--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -347,7 +347,7 @@
             "11": "Qual è stata l’ultima bugia che hai raccontato?",
             "12": "Qual è la tua cucina preferita?",
             "13": "Di cosa hai ‘troppo’?",
-            "14": "Cosa ti vorresti dire tra un anno?",
+            "14": "Cosa vorresti dire al te stesso di un anno fa?",
             "15": "Qual è la tua più grande forza?",
             "16": "A parte i tuoi vestiti, cosa hai avuto con te per la maggior parte del tempo oggi?",
             "17": "Qual è il tuo peccato più soddisfacente?",
